initial setup of red/green alerts

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -27,6 +27,9 @@
     "⚠️ Medical Alert" : {
 
     },
+    "✅ No alerts in the past week" : {
+
+    },
     "About Us" : {
 
     },
@@ -321,6 +324,9 @@
           }
         }
       }
+    },
+    "Great job taking care of your little one! 💕 Keep up the amazing work!" : {
+
     },
     "Green" : {
 
