Added dynamic UI updates via Observable model

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -518,6 +518,9 @@
     "Next page" : {
 
     },
+    "No babies found" : {
+
+    },
     "No baby selected" : {
 
     },
@@ -561,6 +564,9 @@
 
     },
     "Pink" : {
+
+    },
+    "Please add a baby in Settings before adding entries." : {
 
     },
     "Please enter your baby's information" : {
