--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -753,6 +753,9 @@
     "Void Details" : {
 
     },
+    "Void Entries" : {
+
+    },
     "Voids" : {
 
     },
@@ -837,9 +840,6 @@
       }
     },
     "Wet Diaper Drop" : {
-
-    },
-    "Wet Diaper Entries" : {
 
     },
     "What entry would you like to enter?" : {
