Revert "Update naming to match that of other viz views"
This reverts commit c2ae944c4eb38be466e8c99353b20ae963724e45.

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -30,7 +30,7 @@
     "⚠️ Medical Alert" : {
 
     },
-    "⚠️ Seek medical care!" : {
+    "⚠️ Signs of dehydration detected. Seek medical care!" : {
 
     },
     "✅ No alerts in the past week" : {
@@ -109,9 +109,6 @@
 
     },
     "Age" : {
-
-    },
-    "Alert status" : {
 
     },
     "Allow Notifications" : {
