Fixed Firebase sync, AddEntryView

--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -269,6 +269,9 @@
     "Early Alerts" : {
 
     },
+    "Entry saved successfully!" : {
+
+    },
     "Error" : {
 
     },
@@ -682,9 +685,6 @@
 
     },
     "Stools" : {
-
-    },
-    "Success saving" : {
 
     },
     "Swift Package Manager" : {
