--- a/Feedbridge/Resources/Localizable.xcstrings
+++ b/Feedbridge/Resources/Localizable.xcstrings
@@ -21,13 +21,22 @@
         }
       }
     },
+    "⚠️ Alert" : {
+
+    },
     "⚠️ Dehydration Alert" : {
 
     },
     "⚠️ Medical Alert" : {
 
     },
+    "⚠️ Seek medical care!" : {
+
+    },
     "✅ No alerts in the past week" : {
+
+    },
+    "✅ Normal" : {
 
     },
     "About Us" : {
@@ -100,6 +109,9 @@
 
     },
     "Age" : {
+
+    },
+    "Alert" : {
 
     },
     "Allow Notifications" : {
@@ -328,7 +340,7 @@
         }
       }
     },
-    "Great job taking care of your little one! 💕 Keep up the amazing work!" : {
+    "Great job taking care of your little one! Keep up the amazing work!" : {
 
     },
     "Green" : {
@@ -376,6 +388,9 @@
           }
         }
       }
+    },
+    "Heart icon" : {
+
     },
     "Heavy" : {
 
@@ -753,6 +768,9 @@
     "Void Details" : {
 
     },
+    "Void Entries" : {
+
+    },
     "Voids" : {
 
     },
@@ -837,9 +855,6 @@
       }
     },
     "Wet Diaper Drop" : {
-
-    },
-    "Wet Diaper Entries" : {
 
     },
     "What entry would you like to enter?" : {
